--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-comerce</title>
+  <title>Tienda Gaming</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css">
@@ -24,12 +24,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link " aria-current="page" href="/">Home</a>
+          <a class="nav-link " aria-current="page" href="/">Inicio</a>
 
-          <a class="nav-link" href='/api/products'>Products</a ->
+          <a class="nav-link" href='/api/products'>Productos</a ->
           <a class="nav-link" href='/chat'>Chat</a ->
-          <a class="nav-link" href="/realtimeproducts">Live Products</a>
-          <a class="nav-link" href='/mockingproducts'>Mocking Products</a ->
+          <a class="nav-link" href="/realtimeproducts">Tiempo real</a>
+          <a class="nav-link" href='/mockingproducts'>Mocking</a ->
         </div>
       </div>
       {{#unless user}}
@@ -39,7 +39,7 @@
     </div>
   </nav>
   {{{body}}}
-  <footer>Backend ©️2023</footer>
+  <footer>Backend ©️2024</footer>
   <script src="https://kit.fontawesome.com/2aef7b92d3.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
